# chatbot-webhooks

./: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  manage.py  nginx.conf  pyproject.toml  requirements-deploy.txt  shape_rj.geojson  start-server.sh
.github/workflows/: auto-approve-pr.yaml  cd-prod.yaml  cd-staging.yaml
.github/workflows/scripts/: download_envs.py
chatbot_webhooks/: asgi.py  db.py  dependencies.py  main.py  models.py  urls.py  wsgi.py
chatbot_webhooks/config/: __init__.py  base.py  dev.py  prod.py
chatbot_webhooks/routers/: chat.py  token.py  webhook.py
chatbot_webhooks/settings/: base.py  prod.py
chatbot_webhooks/webhooks/: admin.py  apps.py  middleware.py  models.py  tags.py  teste.py  utils.py  views.py
chatbot_webhooks/webhooks/migrations/: 0001_initial.py
migrations/chatbot_webhooks/: 0_20231005080915_init.py
scripts/: create_token.py
