[tool.poetry]
name = "chatbot-webhooks"
version = "0.1.0"
description = ""
authors = ["Gabriel Gazola Milan <gabriel.gazola@poli.ufrj.br>"]
packages = [{include = "chatbot_webhooks"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
django = "^4.2.2"
django-cors-headers = "^4.1.0"
google-cloud-dialogflow-cx = "^1.23.0"
psycopg2-binary = "^2.9.6"
gunicorn = "^20.1.0"
loguru = "^0.7.2"
prefeitura-rio = {version = "1.0.0", extras = ["sgrc"]}
googlemaps = "^4.10.0"
requests = "^2.31.0"
sentry-sdk = "^1.26.0"
jellyfish = "^1.0.0"
twilio = "^8.5.0"
geobr = "^0.2.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
