[tool.poetry]
name = "chatbot-webhooks"
version = "0.1.0"
description = ""
authors = ["Gabriel Gazola Milan <gabriel.gazola@poli.ufrj.br>"]
packages = [{ include = "chatbot_webhooks" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
google-cloud-dialogflow-cx = "^1.23.0"
loguru = "^0.7.2"
prefeitura-rio = "^1.1.2"
requests = "^2.31.0"
sentry-sdk = { version = "^1.26.0", extras = ["fastapi"] }
jellyfish = "^1.0.0"
geobr = "^0.2.0"
unidecode = "^1.3.7"
fastapi = "^0.103.2"
uvicorn = { version = "^0.23.2", extras = ["standard"] }
aerich = "^0.7.2"
infisical = "^1.5.0"
tortoise-orm = { version = "0.19.3", extras = ["asyncpg"] }
aiohttp = "^3.8.5"
async-googlemaps = "^0.0.10"
googlemaps = "^4.10.0"
pendulum = "^2.1.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
taskipy = "^1.12.0"
black = "^23.9.1"
isort = "^5.12.0"
flake8 = "^6.1.0"

[tool.aerich]
tortoise_orm = "chatbot_webhooks.db.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."

[tool.black]
line-length = 100
target-version = ["py310"]
include = "\\.pyi?$"

[tool.isort]
profile = "black"

[tool.taskipy.tasks]
create-token = "python scripts/create_token.py"
lint = "black . && isort . && flake8 ."
make-migrations = "aerich migrate"
migrate = "aerich upgrade"
ngrok = "ngrok http 8080"
serve = "uvicorn chatbot_webhooks.main:app --reload --port 8080 --workers 2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
